creat bgColor and navbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,3 +16,12 @@ body{
   background-attachment: fixed;
   color: #1f2937;
 }
+
+
+.outline-groove {
+  outline-style: groove;
+  outline-width: 2px;
+  outline-color: #fff;
+
+}
+
